--- a/HomeHistory.Web/wwwroot/ui/reports.htm
+++ b/HomeHistory.Web/wwwroot/ui/reports.htm
@@ -8,36 +8,28 @@
 
                 <action-list>
                     <nav aria-label=" User settings" data-view-component="true" class="NavigationList">
-                        <ul aria-label="User settings" nav_classes="org-sub-menu" data-view-component="true"
-                            class="ActionList">
-                            <li id="nav-list-section-240da329-3456-458e-9660-54ff058d1ad1" aria-hidden="true"
-                                data-view-component="true" class="ActionList-sectionDivider">
+                        <ul aria-label="User settings" nav_classes="org-sub-menu" data-view-component="true" class="ActionList">
+                            <li id="nav-list-section-240da329-3456-458e-9660-54ff058d1ad1" aria-hidden="true" data-view-component="true" class="ActionList-sectionDivider">
                                 General
                             </li>
                             <li data-view-component="true" class="ActionList-item ActionList-item--hasSubItem">
-                                <ul aria-label="Access settings"
-                                    aria-labelledby="nav-list-section-240da329-3456-458e-9660-54ff058d1ad1"
-                                    data-view-component="true" class="ActionList ActionList--subGroup">
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-bar">
+                                <ul aria-label="Access settings" aria-labelledby="nav-list-section-240da329-3456-458e-9660-54ff058d1ad1" data-view-component="true" class="ActionList ActionList--subGroup">
+                                    <li data-item-id="" data-view-component="true" class="ActionList-item org-menu-item">
+                                        <a href="#BP" tabindex="0" data-view-component="true" class="ActionList-content ActionList-content--visual16">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-hh-bar">
                                                 <i class="fas fa-building fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label chart-bar">
+                                            <span class="ActionList-item-label chart-hh-bar">
                                                 Bar Chart
                                             </span>
                                         </a>
                                     </li>
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-pie">
+                                    <li data-item-id="" data-view-component="true" class="ActionList-item org-menu-item">
+                                        <a href="#BP" tabindex="0" data-view-component="true" class="ActionList-content ActionList-content--visual16">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-hh-pie">
                                                 <i class="fas fa-calendar fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label chart-pie">
+                                            <span class="ActionList-item-label chart-hh-pie">
                                                 Pie Chart
                                             </span>
                                         </a>
@@ -45,34 +37,27 @@
                                 </ul>
                             </li>
                             <li class="ActionList-sectionDivider"></li>
-                            <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true"
-                                data-view-component="true" class="ActionList-sectionDivider">
+                            <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true" data-view-component="true" class="ActionList-sectionDivider">
                                 Payment
                             </li>
                             <li data-view-component="true" class="ActionList-item ActionList-item--hasSubItem">
-                                <ul aria-label="Code, planning and automation"
-                                    aria-labelledby="nav-list-section-092978e5-594c-497a-ab7e-731494460b65"
-                                    data-view-component="true" class="ActionList ActionList--subGroup">
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-line">
+                                <ul aria-label="Code, planning and automation" aria-labelledby="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" data-view-component="true" class="ActionList ActionList--subGroup">
+                                    <li data-item-id="" data-view-component="true" class="ActionList-item org-menu-item">
+                                        <a href="#BP" tabindex="0" data-view-component="true" class="ActionList-content ActionList-content--visual16">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-hh-line">
                                                 <i class="fas fa-sign-hanging fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label chart-line">
+                                            <span class="ActionList-item-label chart-hh-line">
                                                 Line Chart
                                             </span>
                                         </a>
                                     </li>
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-gantt">
+                                    <li data-item-id="" data-view-component="true" class="ActionList-item org-menu-item">
+                                        <a href="#BP" tabindex="0" data-view-component="true" class="ActionList-content ActionList-content--visual16">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-hh-area">
                                                 <i class="fas fa-filter-circle-dollar fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label chart-area">
+                                            <span class="ActionList-item-label chart-hh-area">
                                                 Area Chart
                                             </span>
                                         </a>
@@ -80,34 +65,27 @@
                                 </ul>
                             </li>
                             <li class="ActionList-sectionDivider"></li>
-                            <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true"
-                                data-view-component="true" class="ActionList-sectionDivider">
+                            <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true" data-view-component="true" class="ActionList-sectionDivider">
                                 End of Year
                             </li>
                             <li data-view-component="true" class="ActionList-item ActionList-item--hasSubItem">
-                                <ul aria-label="Code, planning and automation"
-                                    aria-labelledby="nav-list-section-092978e5-594c-497a-ab7e-731494460b65"
-                                    data-view-component="true" class="ActionList ActionList--subGroup">
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
+                                <ul aria-label="Code, planning and automation" aria-labelledby="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" data-view-component="true" class="ActionList ActionList--subGroup">
+                                    <li data-item-id="" data-view-component="true" class="ActionList-item org-menu-item">
+                                        <a href="#BP" tabindex="0" data-view-component="true" class="ActionList-content ActionList-content--visual16">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-hh-gantt">
                                                 <i class="fas fa-ticket fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label chart-gantt">
+                                            <span class="ActionList-item-label chart-hh-gantt">
                                                 Gantt Chart
                                             </span>
                                         </a>
                                     </li>
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
+                                    <li data-item-id="" data-view-component="true" class="ActionList-item org-menu-item">
+                                        <a href="#BP" tabindex="0" data-view-component="true" class="ActionList-content ActionList-content--visual16">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-hh-scatter">
                                                 <i class="fas fa-receipt fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label chart-scatter">
+                                            <span class="ActionList-item-label chart-hh-scatter">
                                                 Scatter Chart
                                             </span>
                                         </a>
@@ -122,10 +100,10 @@
 
             <div class="col-md-10" style="padding-top:20px;">
                 <div id="divReport" style="height: 600px;">
+                </div>
+
             </div>
 
         </div>
 
     </div>
-
-</div>
