--- a/HomeHistory.Web/wwwroot/secure.htm
+++ b/HomeHistory.Web/wwwroot/secure.htm
@@ -112,7 +112,7 @@
                 </a>
 
                 <form class="d-none d-md-flex input-group w-auto my-auto">
-                    <input autocomplete="off" type="search" class="form-control rounded" placeholder='Search Properties' style="min-width: 225px" />
+                    <input id="txtPropSearch" autocomplete="off" type="search" class="form-control rounded" placeholder='Search Properties' style="min-width: 225px" />
                     <span class="input-group-text border-0"><i class="fas fa-search"></i></span>
                 </form>
 
