--- a/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
+++ b/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
@@ -122,114 +122,85 @@
 <div style="display:none;">
     <div id="propOverview">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-4">
-                    <!-- <h4 class="line-1"></h4>
-                    <div class="line-2"></div>
-                    <div class="city-state-zip"></div> -->
-                    <!-- <div class="formatted-address" style="white-space:pre-wrap;"></div> -->
+            <div class="row justify-content-between align-items-center mb-5">
+                <div class="col flex-shrink-0 mb-5 mb-md-0">
+                    <h1 class="display-4 mb-0">
+                        <div class="line-1"></div>
+                    </h1>
+                    <div class="text-muted line-2"></div>
+                    <div class="text-muted city-state-zip"></div>
                 </div>
-                <div class="col-4">
-
-                </div>
-                <div class="col-4">
+                <div class="col-12 col-md-auto ">
+                    <div class="d-flex flex-column flex-sm-row gap-3 ">
+                        Other Content
+                    </div>
                 </div>
             </div>
-            <div class="row g-3 mb-3">
-                <div class="col-md-6 col-xxl-3">
-                    <div class="card h-md-100 ecommerce-card-min-width">
-                        <div class="card-header pb-0">
-                            <h4 class="line-1"></h4>
-                            <div class="line-2"></div>
-                            <div class="city-state-zip"></div>
-                        </div>
-                        <div class="card-body d-flex flex-column justify-content-end">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="font-sans-serif lh-1 mb-1 fs-4"><i class="fa-regular fa-2xl fa-face-smile"></i> Occupied</div>
-                                </div>
-                                <div class="col-auto ps-0">
-                                    <div class="echart-bar-weekly-sales h-100" style="-webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1644881509994">
-                                        <div style="position: relative; width: 136px; height: 61px; padding: 0px; margin: 0px; border-width: 0px; cursor: default;"><canvas data-zr-dom-id="zr_0" width="136" height="61" style="position: absolute; left: 0px; top: 0px; width: 136px; height: 61px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"></canvas></div>
-                                        <div class="" style="position: absolute; display: block; border-style: solid; white-space: nowrap; z-index: 9999999; box-shadow: rgba(0, 0, 0, 0.2) 1px 2px 10px; background-color: rgb(249, 250, 253); border-width: 1px; border-radius: 4px; color: rgb(11, 23, 39); font: 14px / 21px &quot;Microsoft YaHei&quot;; padding: 7px 10px; top: 0px; left: 0px; transform: translate3d(51px, -46px, 0px); border-color: rgb(216, 226, 239); pointer-events: none; visibility: hidden; opacity: 0;">Thu : 70</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="row ">
+                <div class="col-4 ">
+                    <!-- <h4 class="line-1 "></h4>
+                    <div class="line-2 "></div>
+                    <div class="city-state-zip "></div> -->
+                    <!-- <div class="formatted-address " style="white-space:pre-wrap; "></div> -->
                 </div>
-                <div class="col-md-6 col-xxl-3">
-                    <div class="card h-md-100">
-                        <div class="card-header pb-0">
-                            <h6 class="mb-0 mt-2">Total Rent</h6>
-                        </div>
-                        <div class="card-body d-flex flex-column justify-content-end">
-                            <div class="row justify-content-between">
-                                <div class="col-auto align-self-end">
-                                    <div class="fs-4 fw-normal font-sans-serif text-700 lh-1 mb-1">58.4K</div><span class="badge rounded-pill fs--2 bg-200 text-primary"><svg class="svg-inline--fa fa-caret-up fa-w-10 me-1" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="caret-up" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg=""><path fill="currentColor" d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"></path></svg><!-- <span class="fas fa-caret-up me-1"></span>                                    Font Awesome fontawesome.com -->13.6%</span>
-                                </div>
-                                <div class="col-auto ps-0 mt-n4">
-                                    <div class="echart-default-total-order" data-echarts="{&quot;tooltip&quot;:{&quot;trigger&quot;:&quot;axis&quot;,&quot;formatter&quot;:&quot;{b0} : {c0}&quot;},&quot;xAxis&quot;:{&quot;data&quot;:[&quot;Week 4&quot;,&quot;Week 5&quot;,&quot;Week 6&quot;,&quot;Week 7&quot;]},&quot;series&quot;:[{&quot;type&quot;:&quot;line&quot;,&quot;data&quot;:[20,40,100,120],&quot;smooth&quot;:true,&quot;lineStyle&quot;:{&quot;width&quot;:3}}],&quot;grid&quot;:{&quot;bottom&quot;:&quot;2%&quot;,&quot;top&quot;:&quot;2%&quot;,&quot;right&quot;:&quot;10px&quot;,&quot;left&quot;:&quot;10px&quot;}}"
-                                        data-echart-responsive="true" _echarts_instance_="ec_1644881509999" style="-webkit-tap-highlight-color: transparent; user-select: none; position: relative;">
-                                        <div style="position: relative; width: 138px; height: 90px; padding: 0px; margin: 0px; border-width: 0px;"><canvas data-zr-dom-id="zr_0" width="138" height="90" style="position: absolute; left: 0px; top: 0px; width: 138px; height: 90px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"></canvas></div>
-                                        <div class=""></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-4 ">
+
                 </div>
-                <div class="col-md-6 col-xxl-3">
-                    <div class="card h-md-100">
-                        <div class="card-header pb-0">
-                            <h6 class="mb-0 mt-2">Renters</h6>
+                <div class="col-4 ">
+                </div>
+            </div>
+            <div class="row g-3 mb-3 ">
+                <div class="col-md-6 col-xxl-3 ">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class=""><i class="fas fa-building fa-fw" aria-hidden="true"></i> Status</h5>
                         </div>
                         <div class="card-body">
-                            <div class="row h-100 justify-content-between g-0">
-                                <div class="col-auto position-relative">
-                                    <div class="fs--2">
-                                        <div class="d-flex flex-between-center mb-1">
-                                            <div class="d-flex align-items-center"><span class="dot bg-primary"></span><span class="fw-semi-bold">Bill Gates</span></div>
-                                            <div class="d-xxl-none">33%</div>
-                                        </div>
-                                        <div class="d-flex flex-between-center mb-1">
-                                            <div class="d-flex align-items-center"><span class="dot bg-info"></span><span class="fw-semi-bold">Elon Musk</span></div>
-                                            <div class="d-xxl-none">29%</div>
-                                        </div>
-                                        <div class="d-flex flex-between-center mb-1">
-                                            <div class="d-flex align-items-center"><span class="dot bg-300"></span><span class="fw-semi-bold">Warren Buffett</span></div>
-                                            <div class="d-xxl-none">20%</div>
-                                        </div>
-                                    </div>
-                                    <!-- <div class="position-absolute top-50 start-50 translate-middle text-dark fs-2">26M</div> -->
+                            <div class="row ">
+                                <div class="col ">
+                                    <div class=""><i class="fa-regular fa-2xl fa-face-smile "></i> Occupied</div>
                                 </div>
-
-                                <div class="col-auto text-center ps-2">
-                                    <div class="fs-4 fw-normal font-sans-serif text-primary mb-1 lh-1">26M</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xxl-3 ">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class=""><i class="fa-regular fas fa-dollar-sign"></i> Total Rent</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="row ">
+                                <div class="col ">
+                                    <div class="">$4,300</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xxl-3 ">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class=""><i class="fa-regular fas fa-users"></i> Renters</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="row ">
+                                <div class="col ">
+                                    <div class="">Tenants Here</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-xxl-3">
-                    <div class="card h-md-100">
-                        <div class="card-header d-flex flex-between-center pb-0">
-                            <h6 class="mb-0">Work Orders</h6>
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class="mb-0 "><i class="fa-regular fas fa-ticket"></i> Work Orders</h5>
                         </div>
-                        <div class="card-body pt-2">
-                            <div class="row g-0 h-100 align-items-center">
-                                <div class="col">
-                                    <div class="d-flex align-items-center"><img class="me-3" src="assets/img/icons/weather-icon.png" alt="" height="60">
-                                        <div>
-                                            <h6 class="mb-2">Something</h6>
-                                            <div class="fs--2 fw-semi-bold">
-                                                <div class="text-warning">Other Thing</div>Something Else
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-auto text-center ps-2">
-                                    <div class="fs-4 fw-normal font-sans-serif text-primary mb-1 lh-1">Details Here</div>
+                        <div class="card-body">
+                            <div class="row ">
+                                <div class="col ">
+                                    <div class="">Orders Here</div>
                                 </div>
                             </div>
                         </div>
@@ -238,22 +209,22 @@
             </div>
         </div>
     </div>
-    <div id="propCalendar">
-        <div id="divPropCalendar"></div>
+    <div id="propCalendar ">
+        <div id="divPropCalendar "></div>
     </div>
-    <div id="propRent">
+    <div id="propRent ">
         Rent
     </div>
-    <div id="propWorkOrders">
+    <div id="propWorkOrders ">
         Work Orders
     </div>
-    <div id="propReceipts">
+    <div id="propReceipts ">
         Receipts
     </div>
-    <div id="propTenantPortal">
+    <div id="propTenantPortal ">
         Tenant Portal
     </div>
-    <div id="propHistory">
+    <div id="propHistory ">
         History
     </div>
 </div>
